[CONV-9] fix background gap while image loaded

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,19 +1,22 @@
 /* static/css/styles.css */
 
 /* Стили для градиентного фона */
-body {
-    font-family: Arial, sans-serif;
+html, body {
+    height: 100%;
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    height: 100vh;
+    font-family: Arial, sans-serif;
     background: linear-gradient(135deg, #89CFF0 10%, #005FCC 100%);
     color: white;
     text-align: center;
     overflow-y: auto;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 h1 {
